--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mac-security-eth-po-entropy.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mac-security-eth-po-entropy.yml
@@ -20,10 +20,17 @@ mac_security:
       l2_protocols:
         lldp:
           mode: bypass unauthorized
+      traffic_unprotected:
+        allow:
+          enabled: true
     - name: A2
       connection_keys:
         - id: 1234b
           encrypted_key: 12485744465E5A53
+      traffic_unprotected:
+        allow:
+          enabled: true
+          active_sak: true
     - name: A3
       cipher: aes256-gcm-xpn
       connection_keys:
