--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
@@ -153,6 +153,10 @@ keys:
         keys:
           url:
             type: str
+            description: |-
+              Supported URL type -
+                http: http[s]://<hostname>[:<port>]
+                https: http[s]://<hostname>[:<port>]
           ssl_profile:
             type: str
             description: SSL profile name.
