--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10993,6 +10993,7 @@ keys:
       redistribute_routes:
         type: list
         primary_key: source_protocol
+        allow_duplicate_primary_key: true
         convert_types:
         - dict
         - list
@@ -11026,6 +11027,19 @@ keys:
                 `isis`, `user`, `dynamic`.'
             include_leaked:
               type: bool
+            ospf_match_internal:
+              type: bool
+              description: OSPF routes learned from internal sources.
+            ospf_match_external:
+              type: bool
+              description: OSPF routes learned from external sources.
+            ospf_match_nssa_external:
+              type: str
+              description: OSPF routes learned from external NSSA sources.
+              valid_values:
+              - nssa-external
+              - nssa-external 1
+              - nssa-external 2
       vlan_aware_bundles:
         type: list
         primary_key: name
@@ -11635,6 +11649,7 @@ keys:
           redistribute_routes:
             type: list
             primary_key: source_protocol
+            allow_duplicate_primary_key: true
             items:
               type: dict
               keys:
@@ -11668,6 +11683,19 @@ keys:
 
                     Only applicable if `source_protocol` is one of `connected`, `static`,
                     `isis`, `user`, `dynamic`.'
+                ospf_match_internal:
+                  type: bool
+                  description: OSPF routes learned from internal sources.
+                ospf_match_external:
+                  type: bool
+                  description: OSPF routes learned from external sources.
+                ospf_match_nssa_external:
+                  type: str
+                  description: OSPF routes learned from external NSSA sources.
+                  valid_values:
+                  - nssa-external
+                  - nssa-external 1
+                  - nssa-external 2
       address_family_ipv4_multicast:
         type: dict
         keys:
@@ -11711,6 +11739,7 @@ keys:
           redistribute_routes:
             type: list
             primary_key: source_protocol
+            allow_duplicate_primary_key: true
             convert_types:
             - dict
             items:
@@ -11733,6 +11762,19 @@ keys:
                     precedence.
 
                     Only applicable if `source_protocol` is `isis`.'
+                ospf_match_internal:
+                  type: bool
+                  description: OSPF routes learned from internal sources.
+                ospf_match_external:
+                  type: bool
+                  description: OSPF routes learned from external sources.
+                ospf_match_nssa_external:
+                  type: str
+                  description: OSPF routes learned from external NSSA sources.
+                  valid_values:
+                  - nssa-external
+                  - nssa-external 1
+                  - nssa-external 2
       address_family_ipv4_sr_te:
         type: dict
         keys:
@@ -11858,6 +11900,7 @@ keys:
           redistribute_routes:
             type: list
             primary_key: source_protocol
+            allow_duplicate_primary_key: true
             convert_types:
             - dict
             items:
@@ -11880,6 +11923,19 @@ keys:
 
                     Only used if `source_protocol` is one of `connected`, `static`,
                     `isis`, `user`, `dynamic`.'
+                ospf_match_internal:
+                  type: bool
+                  description: OSPF routes learned from internal sources.
+                ospf_match_external:
+                  type: bool
+                  description: OSPF routes learned from external sources.
+                ospf_match_nssa_external:
+                  type: str
+                  description: OSPF routes learned from external NSSA sources.
+                  valid_values:
+                  - nssa-external
+                  - nssa-external 1
+                  - nssa-external 2
       address_family_ipv6_multicast:
         type: dict
         keys:
@@ -11953,6 +12009,7 @@ keys:
           redistribute_routes:
             type: list
             primary_key: source_protocol
+            allow_duplicate_primary_key: true
             convert_types:
             - dict
             items:
@@ -11981,6 +12038,19 @@ keys:
                     precedence.
 
                     Only applicable if `source_protocol` is `isis`.'
+                ospf_match_internal:
+                  type: bool
+                  description: OSPF routes learned from internal sources.
+                ospf_match_external:
+                  type: bool
+                  description: OSPF routes learned from external sources.
+                ospf_match_nssa_external:
+                  type: str
+                  description: OSPF routes learned from external NSSA sources.
+                  valid_values:
+                  - nssa-external
+                  - nssa-external 1
+                  - nssa-external 2
       address_family_ipv6_sr_te:
         type: dict
         keys:
@@ -12862,6 +12932,7 @@ keys:
             redistribute_routes:
               type: list
               primary_key: source_protocol
+              allow_duplicate_primary_key: true
               convert_types:
               - dict
               - list
@@ -12885,6 +12956,19 @@ keys:
 
                       Only applicable if `source_protocol` is one of `connected`,
                       `dynamic`, `isis`, `static` and `user`.'
+                  ospf_match_internal:
+                    type: bool
+                    description: OSPF routes learned from internal sources.
+                  ospf_match_external:
+                    type: bool
+                    description: OSPF routes learned from external sources.
+                  ospf_match_nssa_external:
+                    type: str
+                    description: OSPF routes learned from external NSSA sources.
+                    valid_values:
+                    - nssa-external
+                    - nssa-external 1
+                    - nssa-external 2
             aggregate_addresses:
               type: list
               primary_key: prefix
@@ -13026,6 +13110,7 @@ keys:
                 redistribute_routes:
                   type: list
                   primary_key: source_protocol
+                  allow_duplicate_primary_key: true
                   convert_types:
                   - dict
                   items:
@@ -13059,6 +13144,19 @@ keys:
 
                           Only applicable if `source_protocol` is one of `connected`,
                           `dynamic`, `isis`, `static` and `user`.'
+                      ospf_match_internal:
+                        type: bool
+                        description: OSPF routes learned from internal sources.
+                      ospf_match_external:
+                        type: bool
+                        description: OSPF routes learned from external sources.
+                      ospf_match_nssa_external:
+                        type: str
+                        description: OSPF routes learned from external NSSA sources.
+                        valid_values:
+                        - nssa-external
+                        - nssa-external 1
+                        - nssa-external 2
             address_family_ipv6:
               type: dict
               keys:
@@ -13162,6 +13260,7 @@ keys:
                 redistribute_routes:
                   type: list
                   primary_key: source_protocol
+                  allow_duplicate_primary_key: true
                   convert_types:
                   - dict
                   items:
@@ -13194,6 +13293,19 @@ keys:
 
                           Only applicable if `source_protocol` is one of `connected`,
                           `dynamic`, `isis`, `static` and `user`.'
+                      ospf_match_internal:
+                        type: bool
+                        description: OSPF routes learned from internal sources.
+                      ospf_match_external:
+                        type: bool
+                        description: OSPF routes learned from external sources.
+                      ospf_match_nssa_external:
+                        type: str
+                        description: OSPF routes learned from external NSSA sources.
+                        valid_values:
+                        - nssa-external
+                        - nssa-external 1
+                        - nssa-external 2
             address_family_ipv4_multicast:
               type: dict
               keys:
@@ -13254,6 +13366,7 @@ keys:
                 redistribute_routes:
                   type: list
                   primary_key: source_protocol
+                  allow_duplicate_primary_key: true
                   convert_types:
                   - dict
                   items:
@@ -13283,6 +13396,19 @@ keys:
                           takes precedence.
 
                           Only applicable if `source_protocol` is `isis`.'
+                      ospf_match_internal:
+                        type: bool
+                        description: OSPF routes learned from internal sources.
+                      ospf_match_external:
+                        type: bool
+                        description: OSPF routes learned from external sources.
+                      ospf_match_nssa_external:
+                        type: str
+                        description: OSPF routes learned from external NSSA sources.
+                        valid_values:
+                        - nssa-external
+                        - nssa-external 1
+                        - nssa-external 2
             address_family_ipv6_multicast:
               type: dict
               keys:
@@ -13343,6 +13469,7 @@ keys:
                 redistribute_routes:
                   type: list
                   primary_key: source_protocol
+                  allow_duplicate_primary_key: true
                   convert_types:
                   - dict
                   items:
@@ -13371,6 +13498,19 @@ keys:
                           takes precedence.
 
                           Only applicable if `source_protocol` is `isis`.'
+                      ospf_match_internal:
+                        type: bool
+                        description: OSPF routes learned from internal sources.
+                      ospf_match_external:
+                        type: bool
+                        description: OSPF routes learned from external sources.
+                      ospf_match_nssa_external:
+                        type: str
+                        description: OSPF routes learned from external NSSA sources.
+                        valid_values:
+                        - nssa-external
+                        - nssa-external 1
+                        - nssa-external 2
             address_family_flow_spec_ipv4:
               type: dict
               keys:
