--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-base.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-base.cfg
@@ -93,6 +93,9 @@ router bgp 65101
    redistribute bgp leaked route-map RM-REDISTRIBUTE-BGP
    redistribute connected rcf Router_BGP_Connected()
    redistribute ospf include leaked
+   redistribute ospf match internal
+   redistribute ospf match external
+   redistribute ospf match nssa-external 1
    redistribute static rcf Router_BGP_Static()
    !
    address-family ipv4
@@ -109,6 +112,9 @@ router bgp 65101
       redistribute bgp leaked
       redistribute connected include leaked rcf Address_Family_IPV4_Connected()
       redistribute dynamic route-map Address_Family_IPV4_Dynamic_RM
+      redistribute ospf match internal include leaked
+      redistribute ospf match external
+      redistribute ospf match nssa-external
       redistribute static rcf Address_Family_IPV4_Static()
    !
    address-family ipv6
@@ -122,6 +128,9 @@ router bgp 65101
       network 2001:db8:200::/40 route-map RM-BAR-MATCH
       redistribute bgp leaked route-map RM-REDISTRIBUTE-BGP
       redistribute connected rcf Address_Family_IPV6_Connected()
+      redistribute ospfv3 match external include leaked
+      redistribute ospfv3 match internal
+      redistribute ospfv3 match nssa-external 1
       redistribute ospfv3 include leaked
       redistribute static route-map RM-IPV6-STATIC-TO-BGP
    session tracker ST1
