--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
@@ -34,6 +34,9 @@ router bgp 65001
    address-family ipv6 multicast
       no neighbor FOOBAR activate
       redistribute isis rcf Router_BGP_Isis()
+      redistribute ospf match internal
+      redistribute ospfv3 match external
+      redistribute ospfv3 match nssa-external 2
    !
    vrf VRF01
       !
@@ -58,6 +61,9 @@ router bgp 65001
          neighbor 1.2.3.4 route-map BAR out
          network 2.3.4.0/24 route-map BARFOO
          redistribute connected rcf VRF_AFIPV4_RCF_CONNECTED_1()
+         redistribute ospf match external
+         redistribute ospf match nssa-external 1
+         redistribute ospfv3 match internal
          redistribute static route-map VRF_AFIPV4_RM_STATIC_1
       !
       address-family ipv4 multicast
@@ -68,6 +74,9 @@ router bgp 65001
          neighbor 1.2.3.4 route-map BAR out
          network 239.0.0.0/24 route-map BARFOO
          redistribute connected
+         redistribute ospf match internal
+         redistribute ospf match nssa-external 2
+         redistribute ospfv3 match external
          redistribute static route-map VRF_AFIPV4MULTI_RM_STATIC
       !
       address-family ipv6
@@ -85,6 +94,9 @@ router bgp 65001
          network aa::/64
       redistribute connected rcf VRF_AFIPV6_RCF_CONNECTED()
       redistribute isis include leaked
+      redistribute ospfv3 match external
+      redistribute ospfv3 match internal include leaked
+      redistribute ospfv3 match nssa-external
       redistribute static route-map VRF_AFIPV6_RM_STATIC
       !
       address-family ipv6 multicast
@@ -92,6 +104,9 @@ router bgp 65001
          bgp missing-policy direction out action deny
          network ff08:1::/64
          redistribute connected
+         redistribute ospf match external
+         redistribute ospf match nssa-external
+         redistribute ospfv3 match internal
          redistribute static route-map VRF_AFIPV6MULTI_RM_STATIC
    !
    vrf VRF02
