--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
@@ -76,6 +76,12 @@ router_bgp:
   redistribute_routes:
     - source_protocol: ospf
       include_leaked: true
+    - source_protocol: ospf
+      ospf_match_internal: true
+    - source_protocol: ospf
+      ospf_match_external: true
+    - source_protocol: ospf
+      ospf_match_nssa_external: nssa-external 1
     - source_protocol: bgp
       route_map: RM-REDISTRIBUTE-BGP
       # this should not do anything as leaked is generated when source protocol is bgp
@@ -106,6 +112,13 @@ router_bgp:
       - ip_address: 10.2.3.9
         rcf_out: Address_Family_IPV4_Out()
     redistribute_routes:
+      - source_protocol: ospf
+        include_leaked: true
+        ospf_match_internal: true
+      - source_protocol: ospf
+        ospf_match_external: true
+      - source_protocol: ospf
+        ospf_match_nssa_external: nssa-external
       - source_protocol: connected
         include_leaked: true
         rcf: Address_Family_IPV4_Connected()
@@ -131,6 +144,13 @@ router_bgp:
         rcf_in: Address_Family_IPV6_In()
         rcf_out: Address_Family_IPV6_Out()
     redistribute_routes:
+      - source_protocol: ospfv3
+        include_leaked: true
+        ospf_match_external: true
+      - source_protocol: ospfv3
+        ospf_match_internal: true
+      - source_protocol: ospfv3
+        ospf_match_nssa_external: nssa-external 1
       - source_protocol: static
         route_map: RM-IPV6-STATIC-TO-BGP
       - source_protocol: ospfv3
