Refactor(plugins): Move WAN internet-exit zscaler integration to eos_designs (#4002)

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -341,7 +341,7 @@ interface Loopback0
 interface Tunnel100
    description Internet Exit ZSCALER-EXIT-POLICY-1 PRI
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
@@ -351,7 +351,7 @@ interface Tunnel100
 interface Tunnel101
    description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
@@ -361,7 +361,7 @@ interface Tunnel101
 interface Tunnel102
    description Internet Exit ZSCALER-EXIT-POLICY-1 TER
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
@@ -468,6 +468,9 @@ ip prefix-list PL-STATIC-VRF-DEFAULT
 !
 ip route 172.16.0.0/16 172.16.5.4
 ip route 66.66.66.0/24 172.17.0.0
+ip route 10.37.121.1/32 172.20.20.21 name IE-ZSCALER-PRI
+ip route 10.39.77.1/32 172.20.20.21 name IE-ZSCALER-SEC
+ip route 10.50.9.1/32 172.20.20.21 name IE-ZSCALER-TER
 !
 ip nat pool PORT-ONLY-POOL port-only
    port range 1500 65535
