--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -363,7 +363,7 @@ interface Loopback0
 interface Tunnel100
    description Internet Exit ZSCALER-EXIT-POLICY-1 PRI
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
@@ -373,7 +373,7 @@ interface Tunnel100
 interface Tunnel101
    description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
@@ -383,7 +383,7 @@ interface Tunnel101
 interface Tunnel102
    description Internet Exit ZSCALER-EXIT-POLICY-1 TER
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
@@ -393,7 +393,7 @@ interface Tunnel102
 interface Tunnel110
    description Internet Exit ZSCALER-EXIT-POLICY-2 PRI
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
@@ -403,7 +403,7 @@ interface Tunnel110
 interface Tunnel111
    description Internet Exit ZSCALER-EXIT-POLICY-2 SEC
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
@@ -413,7 +413,7 @@ interface Tunnel111
 interface Tunnel112
    description Internet Exit ZSCALER-EXIT-POLICY-2 TER
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
@@ -536,6 +536,10 @@ ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:511
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
+!
+ip route 10.37.121.1/32 172.31.0.1 name IE-ZSCALER-PRI
+ip route 10.39.77.1/32 172.31.0.1 name IE-ZSCALER-SEC
+ip route 10.50.9.1/32 172.31.0.1 name IE-ZSCALER-TER
 !
 ip nat pool PORT-ONLY-POOL port-only
    port range 1500 65535
