--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -635,6 +635,16 @@ ip_nat:
       - access_list: ALLOW-ALL
         pool_name: PORT-ONLY-POOL
         nat_type: pool
+static_routes:
+- destination_address_prefix: 10.37.121.1/32
+  name: IE-ZSCALER-PRI
+  gateway: 172.31.0.1
+- destination_address_prefix: 10.39.77.1/32
+  name: IE-ZSCALER-SEC
+  gateway: 172.31.0.1
+- destination_address_prefix: 10.50.9.1/32
+  name: IE-ZSCALER-TER
+  gateway: 172.31.0.1
 router_service_insertion:
   enabled: true
   connections:
@@ -720,7 +730,7 @@ tunnel_interfaces:
 - name: Tunnel100
   description: Internet Exit ZSCALER-EXIT-POLICY-1 PRI
   mtu: 1394
-  ip_address: unnumbered Ethernet3
+  ip_address: unnumbered Loopback0
   tunnel_mode: ipsec
   source_interface: Ethernet3
   destination: 10.37.121.1
@@ -729,7 +739,7 @@ tunnel_interfaces:
 - name: Tunnel101
   description: Internet Exit ZSCALER-EXIT-POLICY-1 SEC
   mtu: 1394
-  ip_address: unnumbered Ethernet3
+  ip_address: unnumbered Loopback0
   tunnel_mode: ipsec
   source_interface: Ethernet3
   destination: 10.39.77.1
@@ -738,7 +748,7 @@ tunnel_interfaces:
 - name: Tunnel102
   description: Internet Exit ZSCALER-EXIT-POLICY-1 TER
   mtu: 1394
-  ip_address: unnumbered Ethernet3
+  ip_address: unnumbered Loopback0
   tunnel_mode: ipsec
   source_interface: Ethernet3
   destination: 10.50.9.1
@@ -747,7 +757,7 @@ tunnel_interfaces:
 - name: Tunnel110
   description: Internet Exit ZSCALER-EXIT-POLICY-2 PRI
   mtu: 1394
-  ip_address: unnumbered Ethernet3
+  ip_address: unnumbered Loopback0
   tunnel_mode: ipsec
   source_interface: Ethernet3
   destination: 10.37.121.1
@@ -756,7 +766,7 @@ tunnel_interfaces:
 - name: Tunnel111
   description: Internet Exit ZSCALER-EXIT-POLICY-2 SEC
   mtu: 1394
-  ip_address: unnumbered Ethernet3
+  ip_address: unnumbered Loopback0
   tunnel_mode: ipsec
   source_interface: Ethernet3
   destination: 10.39.77.1
@@ -765,7 +775,7 @@ tunnel_interfaces:
 - name: Tunnel112
   description: Internet Exit ZSCALER-EXIT-POLICY-2 TER
   mtu: 1394
-  ip_address: unnumbered Ethernet3
+  ip_address: unnumbered Loopback0
   tunnel_mode: ipsec
   source_interface: Ethernet3
   destination: 10.50.9.1
