--- a/ansible_collections/arista/avd/requirements-dev.txt
+++ b/ansible_collections/arista/avd/requirements-dev.txt
@@ -3,7 +3,7 @@ ansible-lint>=6.21.0,<24.5.0
 codespell>=2.2.6
 pycodestyle
 flake8
-pylint>=2.16.1
+pylint>=2.16.1,<3.2.0
 twine
 pre-commit>=3.2.0
 pre-commit-hooks>=3.3.0
