--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
@@ -240,7 +240,8 @@ keys:
           mlag: 300
           non_mlag: 330
       - platforms:
-          - AWE-5x10
+          - AWE-5310
+          - AWE-5510
           - AWE-7250R
           - AWE-7230R
         feature_support:
@@ -249,9 +250,6 @@ keys:
           interface_storm_control: false
           queue_monitor_length_notify: false
         management_interface: Management1/1
-        reload_delay:
-          mlag: 300
-          non_mlag: 330
       - platforms:
           - AWE-7220R
         feature_support:
@@ -259,7 +257,5 @@ keys:
           bgp_update_wait_install: false
           interface_storm_control: false
           queue_monitor_length_notify: false
+          poe: true
         management_interface: Management1
-        reload_delay:
-          mlag: 300
-          non_mlag: 330
