--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -331,6 +331,52 @@ keys:
                 - int
             maximum_routes_warning_only:
               type: bool
+            missing_policy:
+              type: dict
+              description: Missing policy override configuration commands
+              keys:
+                address_family_all:
+                  description: Include all address families for missing policy configuration
+                  type: dict
+                  keys:
+                    direction_in_action:
+                      type: dict
+                      keys:
+                        action:
+                          description: Missing policy in direction options
+                          type: str
+                          valid_values:
+                            - deny
+                            - deny-in-out
+                            - permit
+                        include:
+                          description: Include route map references in missing policy decision
+                          type: list
+                          items:
+                            type: str
+                            valid_values:
+                              - community-list
+                              - prefix-list
+                              - sub-route-map
+                    direction_out_action:
+                      type: dict
+                      keys:
+                        action:
+                          description: Missing policy out direction options
+                          type: str
+                          valid_values:
+                            - deny
+                            - deny-in-out
+                            - permit
+                        include:
+                          description: Include route map references in missing policy decision
+                          type: list
+                          items:
+                            type: str
+                            valid_values:
+                              - community-list
+                              - prefix-list
+                              - sub-route-map
             link_bandwidth:
               type: dict
               keys:
@@ -534,6 +580,52 @@ keys:
                 - int
             maximum_routes_warning_only:
               type: bool
+            missing_policy:
+              type: dict
+              description: Missing policy override configuration commands
+              keys:
+                address_family_all:
+                  description: Include all address families for missing policy configuration
+                  type: dict
+                  keys:
+                    direction_in_action:
+                      type: dict
+                      keys:
+                        action:
+                          description: Missing policy in direction options
+                          type: str
+                          valid_values:
+                            - deny
+                            - deny-in-out
+                            - permit
+                        include:
+                          description: Include route map references in missing policy decision
+                          type: list
+                          items:
+                            type: str
+                            valid_values:
+                              - community-list
+                              - prefix-list
+                              - sub-route-map
+                    direction_out_action:
+                      type: dict
+                      keys:
+                        action:
+                          description: Missing policy out direction options
+                          type: str
+                          valid_values:
+                            - deny
+                            - deny-in-out
+                            - permit
+                        include:
+                          description: Include route map references in missing policy decision
+                          type: list
+                          items:
+                            type: str
+                            valid_values:
+                              - community-list
+                              - prefix-list
+                              - sub-route-map
             allowas_in:
               type: dict
               keys:
