Fixing eos template for marker config.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/monitor-telemetry-postcard-policy.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/monitor-telemetry-postcard-policy.yml
@@ -11,6 +11,7 @@ monitor_telemetry_postcard_policy:
         value: 65000
         mask: "0xffff"
   marker_vxlan:
+    enabled: true
     header_word_zero_bit: 30
   profiles:
     - name: profile1
