--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge.cfg
@@ -182,7 +182,7 @@ route-map RM-EVPN-SOO-IN deny 10
 route-map RM-EVPN-SOO-IN permit 20
 !
 route-map RM-EVPN-SOO-OUT permit 10
-   match extcommunity ECL-EVPN-SOO
+   set extcommunity soo 192.168.30.1:0 additive
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
