--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -500,7 +500,7 @@ route-map RM-EVPN-SOO-IN deny 10
 route-map RM-EVPN-SOO-IN permit 20
 !
 route-map RM-EVPN-SOO-OUT permit 10
-   match extcommunity ECL-EVPN-SOO
+   set extcommunity soo 192.168.42.1:511 additive
 !
 route-map RM-STATIC-2-BGP permit 10
    match ip address prefix-list PL-STATIC-VRF-DEFAULT
