--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
@@ -451,17 +451,20 @@ route-map RM-EVPN-SOO-IN deny 10
 route-map RM-EVPN-SOO-IN permit 20
 !
 route-map RM-EVPN-SOO-OUT permit 10
-   match extcommunity ECL-EVPN-SOO
+   set extcommunity soo 192.168.43.1:422 additive
 !
-route-map RM-WAN-HA-LOCAL-PREF-IN permit 10
-   description Make EVPN routes originated from WAN HA peer less preferred and tag them
-   set local-preference 75
+route-map RM-WAN-HA-PEER-IN permit 10
+   description Set tag 50 on routes received from HA peer over EVPN
    set tag 50
 !
-route-map RM-WAN-HA-LOCAL-PREF-IN permit 20
-   description Make EVPN routes received by WAN HA peer less preferred and tag them
+route-map RM-WAN-HA-PEER-OUT permit 10
+   description Make EVPN routes received from WAN less prefered when sending them to peer.
+   match route-type internal
    set local-preference 50
-   set tag 50
+!
+route-map RM-WAN-HA-PEER-OUT permit 20
+   description Make locally injected routes less prefered when sending them to peer over EVPN.
+   set local-preference 75
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
@@ -493,7 +496,8 @@ router bgp 65000
    neighbor 192.168.143.1 description cv-pathfinder-transit1A
    neighbor 192.168.143.1 route-reflector-client
    neighbor 192.168.143.1 update-source Dps1
-   neighbor 192.168.143.1 route-map RM-WAN-HA-LOCAL-PREF-IN in
+   neighbor 192.168.143.1 route-map RM-WAN-HA-PEER-IN in
+   neighbor 192.168.143.1 route-map RM-WAN-HA-PEER-OUT out
    neighbor 192.168.143.1 send-community
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
