--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
@@ -64,7 +64,8 @@ router_bgp:
     update_source: Dps1
     route_reflector_client: true
     send_community: all
-    route_map_in: RM-WAN-HA-LOCAL-PREF-IN
+    route_map_in: RM-WAN-HA-PEER-IN
+    route_map_out: RM-WAN-HA-PEER-OUT
   vrfs:
   - name: IT
     router_id: 192.168.42.3
@@ -389,22 +390,29 @@ route_maps:
   sequence_numbers:
   - sequence: 10
     type: permit
-    match:
-    - extcommunity ECL-EVPN-SOO
-- name: RM-WAN-HA-LOCAL-PREF-IN
+    set:
+    - extcommunity soo 192.168.42.2:423 additive
+- name: RM-WAN-HA-PEER-IN
   sequence_numbers:
   - sequence: 10
     type: permit
-    description: Make EVPN routes originated from WAN HA peer less preferred and tag them
+    description: Set tag 50 on routes received from HA peer over EVPN
     set:
-    - local-preference 75
     - tag 50
-  - sequence: 20
+- name: RM-WAN-HA-PEER-OUT
+  sequence_numbers:
+  - sequence: 10
     type: permit
-    description: Make EVPN routes received by WAN HA peer less preferred and tag them
+    description: Make EVPN routes received from WAN less prefered when sending them to peer.
+    match:
+    - route-type internal
     set:
     - local-preference 50
-    - tag 50
+  - sequence: 20
+    type: permit
+    description: Make locally injected routes less prefered when sending them to peer over EVPN.
+    set:
+    - local-preference 75
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
   sequence_numbers:
   - sequence: 10
