Updated schema and template

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/mac-security-eth-po-entropy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/mac-security-eth-po-entropy.cfg
@@ -21,6 +21,7 @@ mac security
    profile A3
       cipher aes256-gcm-xpn
       key ab 7 10195F4C5144405A
+      traffic unprotected drop
 !
 hostname mac-security-eth-po-entropy
 !
