--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mac-security-eth-po-entropy.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mac-security-eth-po-entropy.yml
@@ -21,22 +21,22 @@ mac_security:
         lldp:
           mode: bypass unauthorized
       traffic_unprotected:
-        allow:
-          enabled: true
+        action: allow
     - name: A2
       connection_keys:
         - id: 1234b
           encrypted_key: 12485744465E5A53
       traffic_unprotected:
-        allow:
-          enabled: true
-          active_sak: true
+        action: allow
+        allow_active_sak: true
     - name: A3
       cipher: aes256-gcm-xpn
       connection_keys:
         - id: ab
           encrypted_key: 10195F4C5144405A
           fallback: false
+      traffic_unprotected:
+        action: drop
 
 ### Mgmt sec
 management_security:
