--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/mac_security.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/mac_security.schema.yml
@@ -98,13 +98,13 @@ keys:
             traffic_unprotected:
               type: dict
               keys:
-                allow:
-                  type: dict
-                  description: Allow transmit/receive of unprotected traffic.
-                  keys:
-                    enabled:
-                      type: bool
-                      required: true
-                    active_sak:
-                      type: bool
-                      description: Allow transmit/receive of encrypted traffic using operational SAK and block otherwise.
+                action:
+                  type: str
+                  required: true
+                  description: Allow/drop the transmit/receive of unprotected traffic.
+                  valid_values:
+                    - "allow"
+                    - "drop"
+                allow_active_sak:
+                  type: bool
+                  description: Allow transmit/receive of encrypted traffic using operational SAK and block otherwise.
