Refactor: Revert route-maps in VRFS

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-custom-control-plane-policy-edge-3.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-custom-control-plane-policy-edge-3.cfg
@@ -188,7 +188,7 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise local routes towards LAN
-   match extcommunity ECL-EVPN-SOO
+   match route-type local
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
    description Advertise routes received from WAN iBGP towards LAN
@@ -196,9 +196,6 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   set extcommunity soo 192.168.42.3:511 additive
-!
-route-map RM-CONN-2-BGP-VRFS permit 20
    set extcommunity soo 192.168.42.3:511 additive
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
@@ -270,14 +267,14 @@ router bgp 65000
       route-target import evpn 1000:1000
       route-target export evpn 1000:1000
       router-id 192.168.42.3
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
    !
    vrf PROD
       rd 192.168.42.3:142
       route-target import evpn 142:142
       route-target export evpn 142:142
       router-id 192.168.42.3
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
 !
 router traffic-engineering
 !
