--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -380,7 +380,7 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise local routes towards LAN
-   match extcommunity ECL-EVPN-SOO
+   match route-type local
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
    description Advertise routes received from WAN iBGP towards LAN
@@ -396,9 +396,6 @@ route-map RM-CONN-2-BGP permit 10
 !
 route-map RM-CONN-2-BGP permit 50
    match ip address prefix-list PL-WAN-HA-PREFIXES
-!
-route-map RM-CONN-2-BGP-VRFS permit 20
-   set extcommunity soo 192.168.42.2:423 additive
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
@@ -416,12 +413,12 @@ route-map RM-WAN-HA-PEER-IN permit 10
    set tag 50
 !
 route-map RM-WAN-HA-PEER-OUT permit 10
-   description Make EVPN routes received from WAN less prefered when sending them to peer.
+   description Make EVPN routes received from WAN less preferred when sending them to peer.
    match route-type internal
    set local-preference 50
 !
 route-map RM-WAN-HA-PEER-OUT permit 20
-   description Make locally injected routes less prefered when sending them to peer over EVPN.
+   description Make locally injected routes less preferred when sending them to peer over EVPN.
    set local-preference 75
 !
 router bfd
@@ -498,7 +495,7 @@ router bgp 65000
       neighbor 172.17.0.6 remote-as 65199
       neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1.666_vrf_ATTRACTED-VRF-FROM-UPLINK
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
    !
    vrf default
       rd 192.168.42.2:1
@@ -517,7 +514,7 @@ router bgp 65000
       neighbor 172.17.0.6 remote-as 65199
       neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1.1000_vrf_IT
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
    !
    vrf PROD
       rd 192.168.42.2:142
@@ -530,7 +527,7 @@ router bgp 65000
       neighbor 172.17.0.6 remote-as 65199
       neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1.142_vrf_PROD
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
 !
 router traffic-engineering
 !
