--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3B.yml
@@ -115,7 +115,6 @@ router_bgp:
         - 1000:1000
     redistribute_routes:
     - source_protocol: connected
-      route_map: RM-CONN-2-BGP-VRFS
   - name: PROD
     router_id: 192.168.42.7
     rd: 192.168.42.7:142
@@ -130,7 +129,6 @@ router_bgp:
         - 142:142
     redistribute_routes:
     - source_protocol: connected
-      route_map: RM-CONN-2-BGP-VRFS
 service_routing_protocols_model: multi-agent
 ip_routing: true
 transceiver_qsfp_default_mode_4x10: false
@@ -224,7 +222,7 @@ route_maps:
     type: permit
     description: Advertise local routes towards LAN
     match:
-    - extcommunity ECL-EVPN-SOO
+    - route-type local
   - sequence: 30
     type: permit
     description: Advertise routes received from WAN iBGP towards LAN
@@ -268,14 +266,14 @@ route_maps:
   sequence_numbers:
   - sequence: 10
     type: permit
-    description: Make EVPN routes received from WAN less prefered when sending them to peer.
+    description: Make EVPN routes received from WAN less preferred when sending them to peer.
     match:
     - route-type internal
     set:
     - local-preference 50
   - sequence: 20
     type: permit
-    description: Make locally injected routes less prefered when sending them to peer over EVPN.
+    description: Make locally injected routes less preferred when sending them to peer over EVPN.
     set:
     - local-preference 75
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
@@ -284,12 +282,6 @@ route_maps:
     type: permit
     match:
     - extcommunity ECL-EVPN-SOO
-- name: RM-CONN-2-BGP-VRFS
-  sequence_numbers:
-  - sequence: 20
-    type: permit
-    set:
-    - extcommunity soo 192.168.42.6:404 additive
 agents:
 - name: KernelFib
   environment_variables:
