--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
@@ -81,7 +81,6 @@ router_bgp:
         - 1000:1000
     redistribute_routes:
     - source_protocol: connected
-      route_map: RM-CONN-2-BGP-VRFS
   - name: PROD
     router_id: 192.168.43.1
     neighbors:
@@ -101,7 +100,6 @@ router_bgp:
         - 142:142
     redistribute_routes:
     - source_protocol: connected
-      route_map: RM-CONN-2-BGP-VRFS
   - name: ATTRACTED-VRF-FROM-UPLINK
     router_id: 192.168.43.1
     neighbors:
@@ -121,7 +119,6 @@ router_bgp:
         - 666:666
     redistribute_routes:
     - source_protocol: connected
-      route_map: RM-CONN-2-BGP-VRFS
   - name: default
     rd: 192.168.43.1:1
     route_targets:
@@ -138,7 +135,6 @@ router_bgp:
     router_id: 192.168.43.1
     redistribute_routes:
     - source_protocol: connected
-      route_map: RM-CONN-2-BGP-VRFS
   - name: TRANSIT
     router_id: 192.168.43.1
     rd: 192.168.43.1:66
@@ -153,7 +149,6 @@ router_bgp:
         - 66:66
     redistribute_routes:
     - source_protocol: connected
-      route_map: RM-CONN-2-BGP-VRFS
   address_family_evpn:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
@@ -341,7 +336,7 @@ route_maps:
     type: permit
     description: Advertise local routes towards LAN
     match:
-    - extcommunity ECL-EVPN-SOO
+    - route-type local
   - sequence: 30
     type: permit
     description: Advertise routes received from WAN iBGP towards LAN
@@ -385,14 +380,14 @@ route_maps:
   sequence_numbers:
   - sequence: 10
     type: permit
-    description: Make EVPN routes received from WAN less prefered when sending them to peer.
+    description: Make EVPN routes received from WAN less preferred when sending them to peer.
     match:
     - route-type internal
     set:
     - local-preference 50
   - sequence: 20
     type: permit
-    description: Make locally injected routes less prefered when sending them to peer over EVPN.
+    description: Make locally injected routes less preferred when sending them to peer over EVPN.
     set:
     - local-preference 75
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
@@ -401,12 +396,6 @@ route_maps:
     type: permit
     match:
     - extcommunity ECL-EVPN-SOO
-- name: RM-CONN-2-BGP-VRFS
-  sequence_numbers:
-  - sequence: 20
-    type: permit
-    set:
-    - extcommunity soo 192.168.43.1:422 additive
 agents:
 - name: KernelFib
   environment_variables:
