--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge.cfg
@@ -170,9 +170,6 @@ route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    set extcommunity soo 192.168.30.1:0 additive
 !
-route-map RM-CONN-2-BGP-VRFS permit 20
-   set extcommunity soo 192.168.30.1:0 additive
-!
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
 !
@@ -231,7 +228,7 @@ router bgp 65000
       route-target import evpn 42:42
       route-target export evpn 42:42
       router-id 192.168.30.1
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
 !
 management api http-commands
    protocol https
