--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -524,7 +524,7 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise local routes towards LAN
-   match extcommunity ECL-EVPN-SOO
+   match route-type local
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
    description Advertise routes received from WAN iBGP towards LAN
@@ -532,9 +532,6 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   set extcommunity soo 192.168.42.1:511 additive
-!
-route-map RM-CONN-2-BGP-VRFS permit 20
    set extcommunity soo 192.168.42.1:511 additive
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
@@ -611,7 +608,7 @@ router bgp 65000
       neighbor 172.17.0.0 remote-as 65199
       neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.0 description site-ha-disabled-leaf_Ethernet1.666_vrf_ATTRACTED-VRF-FROM-UPLINK
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
    !
    vrf default
       rd 192.168.42.1:1
@@ -627,7 +624,7 @@ router bgp 65000
       neighbor 172.17.0.0 remote-as 65199
       neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.0 description site-ha-disabled-leaf_Ethernet1.1000_vrf_IT
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
    !
    vrf PROD
       rd 192.168.42.1:142
@@ -637,7 +634,7 @@ router bgp 65000
       neighbor 172.17.0.0 remote-as 65199
       neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.0 description site-ha-disabled-leaf_Ethernet1.142_vrf_PROD
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
 !
 router traffic-engineering
 !
