--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
@@ -392,7 +392,7 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise local routes towards LAN
-   match extcommunity ECL-EVPN-SOO
+   match route-type local
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
    description Advertise routes received from WAN iBGP towards LAN
@@ -408,9 +408,6 @@ route-map RM-CONN-2-BGP permit 10
 !
 route-map RM-CONN-2-BGP permit 50
    match ip address prefix-list PL-WAN-HA-PREFIXES
-!
-route-map RM-CONN-2-BGP-VRFS permit 20
-   set extcommunity soo 192.168.42.2:423 additive
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
@@ -428,12 +425,12 @@ route-map RM-WAN-HA-PEER-IN permit 10
    set tag 50
 !
 route-map RM-WAN-HA-PEER-OUT permit 10
-   description Make EVPN routes received from WAN less prefered when sending them to peer.
+   description Make EVPN routes received from WAN less preferred when sending them to peer.
    match route-type internal
    set local-preference 50
 !
 route-map RM-WAN-HA-PEER-OUT permit 20
-   description Make locally injected routes less prefered when sending them to peer over EVPN.
+   description Make locally injected routes less preferred when sending them to peer over EVPN.
    set local-preference 75
 !
 router bfd
@@ -510,7 +507,7 @@ router bgp 65000
       neighbor 172.17.0.10 remote-as 65199
       neighbor 172.17.0.10 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.10 description site-ha-enabled-leaf2B_Ethernet2.666_vrf_ATTRACTED-VRF-FROM-UPLINK
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
    !
    vrf default
       rd 192.168.42.3:1
@@ -529,7 +526,7 @@ router bgp 65000
       neighbor 172.17.0.10 remote-as 65199
       neighbor 172.17.0.10 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.10 description site-ha-enabled-leaf2B_Ethernet2.1000_vrf_IT
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
    !
    vrf PROD
       rd 192.168.42.3:142
@@ -542,7 +539,7 @@ router bgp 65000
       neighbor 172.17.0.10 remote-as 65199
       neighbor 172.17.0.10 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.10 description site-ha-enabled-leaf2B_Ethernet2.142_vrf_PROD
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
 !
 router traffic-engineering
 !
