--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
@@ -311,7 +311,7 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise local routes towards LAN
-   match extcommunity ECL-EVPN-SOO
+   match route-type local
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
    description Advertise routes received from WAN iBGP towards LAN
@@ -327,9 +327,6 @@ route-map RM-CONN-2-BGP permit 10
 !
 route-map RM-CONN-2-BGP permit 50
    match ip address prefix-list PL-WAN-HA-PREFIXES
-!
-route-map RM-CONN-2-BGP-VRFS permit 20
-   set extcommunity soo 192.168.42.6:404 additive
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
@@ -347,12 +344,12 @@ route-map RM-WAN-HA-PEER-IN permit 10
    set tag 50
 !
 route-map RM-WAN-HA-PEER-OUT permit 10
-   description Make EVPN routes received from WAN less prefered when sending them to peer.
+   description Make EVPN routes received from WAN less preferred when sending them to peer.
    match route-type internal
    set local-preference 50
 !
 route-map RM-WAN-HA-PEER-OUT permit 20
-   description Make locally injected routes less prefered when sending them to peer over EVPN.
+   description Make locally injected routes less preferred when sending them to peer over EVPN.
    set local-preference 75
 !
 router bfd
@@ -423,14 +420,14 @@ router bgp 65000
       route-target import evpn 1000:1000
       route-target export evpn 1000:1000
       router-id 192.168.42.7
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
    !
    vrf PROD
       rd 192.168.42.7:142
       route-target import evpn 142:142
       route-target export evpn 142:142
       router-id 192.168.42.7
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
 !
 router traffic-engineering
 !
