--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
@@ -422,7 +422,7 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise local routes towards LAN
-   match extcommunity ECL-EVPN-SOO
+   match route-type local
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
    description Advertise routes received from WAN iBGP towards LAN
@@ -438,9 +438,6 @@ route-map RM-CONN-2-BGP permit 10
 !
 route-map RM-CONN-2-BGP permit 50
    match ip address prefix-list PL-WAN-HA-PREFIXES
-!
-route-map RM-CONN-2-BGP-VRFS permit 20
-   set extcommunity soo 192.168.43.1:422 additive
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
@@ -458,12 +455,12 @@ route-map RM-WAN-HA-PEER-IN permit 10
    set tag 50
 !
 route-map RM-WAN-HA-PEER-OUT permit 10
-   description Make EVPN routes received from WAN less prefered when sending them to peer.
+   description Make EVPN routes received from WAN less preferred when sending them to peer.
    match route-type internal
    set local-preference 50
 !
 route-map RM-WAN-HA-PEER-OUT permit 20
-   description Make locally injected routes less prefered when sending them to peer over EVPN.
+   description Make locally injected routes less preferred when sending them to peer over EVPN.
    set local-preference 75
 !
 router bfd
@@ -534,7 +531,7 @@ router bgp 65000
       neighbor 172.17.0.2 remote-as 65199
       neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2.666_vrf_ATTRACTED-VRF-FROM-UPLINK
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
    !
    vrf default
       rd 192.168.43.2:1
@@ -550,11 +547,11 @@ router bgp 65000
       neighbor 172.17.0.2 remote-as 65199
       neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2.1000_vrf_IT
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
    !
    vrf NOT-WAN-VRF
       router-id 192.168.43.2
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
    !
    vrf PROD
       rd 192.168.43.2:142
@@ -564,14 +561,14 @@ router bgp 65000
       neighbor 172.17.0.2 remote-as 65199
       neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2.142_vrf_PROD
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
    !
    vrf TRANSIT
       rd 192.168.43.2:66
       route-target import evpn 66:66
       route-target export evpn 66:66
       router-id 192.168.43.2
-      redistribute connected route-map RM-CONN-2-BGP-VRFS
+      redistribute connected
 !
 router traffic-engineering
 !
